@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -24,45 +24,67 @@
  */
 package com.oracle.svm.agent;
 
-import java.io.FileReader;
+import static com.oracle.svm.agent.NativeImageAgent.ExitCodes.AGENT_ERROR;
+import static com.oracle.svm.agent.NativeImageAgent.ExitCodes.PARSE_ERROR;
+import static com.oracle.svm.agent.NativeImageAgent.ExitCodes.SUCCESS;
+import static com.oracle.svm.agent.NativeImageAgent.ExitCodes.USAGE_ERROR;
+
+import java.io.FileNotFoundException;
 import java.io.IOException;
-import java.io.Reader;
 import java.nio.file.AtomicMoveNotSupportedException;
+import java.nio.file.FileAlreadyExistsException;
 import java.nio.file.Files;
 import java.nio.file.NoSuchFileException;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
+import java.nio.file.StandardOpenOption;
+import java.nio.file.attribute.FileTime;
 import java.text.DateFormat;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.ConcurrentModificationException;
 import java.util.Date;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 import java.util.TimeZone;
 import java.util.concurrent.ScheduledThreadPoolExecutor;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Function;
-import java.util.regex.Pattern;
+import java.util.function.Predicate;
+import java.util.function.Supplier;
 
+import org.graalvm.nativeimage.Platform;
 import org.graalvm.nativeimage.ProcessProperties;
 import org.graalvm.nativeimage.hosted.Feature;
 
+import com.oracle.svm.agent.conditionalconfig.ConditionalConfigurationPartialRunWriter;
+import com.oracle.svm.agent.conditionalconfig.ConditionalConfigurationWriter;
+import com.oracle.svm.agent.configwithorigins.ConfigurationWithOriginsTracer;
+import com.oracle.svm.agent.configwithorigins.ConfigurationWithOriginsWriter;
+import com.oracle.svm.agent.configwithorigins.MethodInfoRecordKeeper;
+import com.oracle.svm.agent.ignoredconfig.AgentMetaInfProcessor;
+import com.oracle.svm.agent.stackaccess.EagerlyLoadedJavaStackAccess;
+import com.oracle.svm.agent.stackaccess.InterceptedState;
+import com.oracle.svm.agent.stackaccess.OnDemandJavaStackAccess;
+import com.oracle.svm.agent.tracing.ConfigurationResultWriter;
+import com.oracle.svm.agent.tracing.TraceFileWriter;
+import com.oracle.svm.agent.tracing.core.Tracer;
+import com.oracle.svm.agent.tracing.core.TracingResultWriter;
+import com.oracle.svm.configure.config.ConfigurationFileCollection;
 import com.oracle.svm.configure.config.ConfigurationSet;
+import com.oracle.svm.configure.config.conditional.ConditionalConfigurationPredicate;
+import com.oracle.svm.configure.filters.ComplexFilter;
+import com.oracle.svm.configure.filters.ConfigurationFilter;
 import com.oracle.svm.configure.filters.FilterConfigurationParser;
-import com.oracle.svm.configure.filters.RuleNode;
-import com.oracle.svm.configure.json.JsonPrintable;
-import com.oracle.svm.configure.json.JsonWriter;
+import com.oracle.svm.configure.filters.HierarchyFilterNode;
 import com.oracle.svm.configure.trace.AccessAdvisor;
 import com.oracle.svm.configure.trace.TraceProcessor;
-import com.oracle.svm.core.SubstrateUtil;
-import com.oracle.svm.core.configure.ConfigurationFiles;
-import com.oracle.svm.driver.NativeImage;
-import com.oracle.svm.jni.nativeapi.JNIEnvironment;
-import com.oracle.svm.jni.nativeapi.JNIJavaVM;
-import com.oracle.svm.jni.nativeapi.JNIObjectHandle;
+import com.oracle.svm.core.configure.ConfigurationFile;
+import com.oracle.svm.core.configure.PredefinedClassesConfigurationParser;
+import com.oracle.svm.core.jni.headers.JNIEnvironment;
+import com.oracle.svm.core.jni.headers.JNIJavaVM;
+import com.oracle.svm.core.jni.headers.JNIObjectHandle;
+import com.oracle.svm.driver.metainf.NativeImageMetaInfWalker;
 import com.oracle.svm.jvmtiagentbase.JNIHandleSet;
 import com.oracle.svm.jvmtiagentbase.JvmtiAgentBase;
 import com.oracle.svm.jvmtiagentbase.Support;
@@ -70,20 +92,35 @@ import com.oracle.svm.jvmtiagentbase.jvmti.JvmtiEnv;
 import com.oracle.svm.jvmtiagentbase.jvmti.JvmtiEventCallbacks;
 import com.oracle.svm.jvmtiagentbase.jvmti.JvmtiInterface;
 
+import jdk.graal.compiler.phases.common.LazyValue;
+
 public final class NativeImageAgent extends JvmtiAgentBase<NativeImageAgentJNIHandleSet> {
     private static final String AGENT_NAME = "native-image-agent";
     private static final TimeZone UTC_TIMEZONE = TimeZone.getTimeZone("UTC");
 
     private ScheduledThreadPoolExecutor periodicConfigWriterExecutor = null;
 
-    private TraceWriter traceWriter;
+    private Tracer tracer;
+    private TracingResultWriter tracingResultWriter;
 
     private Path configOutputDirPath;
-
-    private AccessAdvisor accessAdvisor;
+    private Path configOutputLockFilePath;
+    private FileTime expectedConfigModifiedBefore;
 
     private static String getTokenValue(String token) {
         return token.substring(token.indexOf('=') + 1);
+    }
+
+    private static boolean getBooleanTokenValue(String token) {
+        int equalsIndex = token.indexOf('=');
+        if (equalsIndex == -1) {
+            return true;
+        }
+        return Boolean.parseBoolean(token.substring(equalsIndex + 1));
+    }
+
+    private static boolean isBooleanOption(String token, String option) {
+        return token.equals(option) || token.startsWith(option + "=");
     }
 
     @Override
@@ -100,158 +137,269 @@ public final class NativeImageAgent extends JvmtiAgentBase<NativeImageAgentJNIHa
     protected int onLoadCallback(JNIJavaVM vm, JvmtiEnv jvmti, JvmtiEventCallbacks callbacks, String options) {
         String traceOutputFile = null;
         String configOutputDir = null;
-        ConfigurationSet mergeConfigs = new ConfigurationSet();
+        ConfigurationFileCollection mergeConfigs = new ConfigurationFileCollection();
+        ConfigurationFileCollection omittedConfigs = new ConfigurationFileCollection();
         boolean builtinCallerFilter = true;
         boolean builtinHeuristicFilter = true;
         List<String> callerFilterFiles = new ArrayList<>();
         List<String> accessFilterFiles = new ArrayList<>();
         boolean experimentalClassLoaderSupport = true;
-        boolean build = false;
+        boolean experimentalClassDefineSupport = false;
+        boolean experimentalUnsafeAllocationSupport = false;
+        boolean experimentalOmitClasspathConfig = false;
+        boolean configurationWithOrigins = false;
+        List<String> conditionalConfigUserPackageFilterFiles = new ArrayList<>();
+        List<String> conditionalConfigClassNameFilterFiles = new ArrayList<>();
+        boolean conditionalConfigPartialRun = false;
         int configWritePeriod = -1; // in seconds
         int configWritePeriodInitialDelay = 1; // in seconds
+        boolean trackReflectionMetadata = true;
 
         String[] tokens = !options.isEmpty() ? options.split(",") : new String[0];
         for (String token : tokens) {
             if (token.startsWith("trace-output=")) {
                 if (traceOutputFile != null) {
-                    return usage(1, "cannot specify trace-output= more than once.");
+                    return usage("cannot specify trace-output= more than once.");
                 }
                 traceOutputFile = getTokenValue(token);
             } else if (token.startsWith("config-output-dir=") || token.startsWith("config-merge-dir=")) {
                 if (configOutputDir != null) {
-                    return usage(1, "cannot specify more than one of config-output-dir= or config-merge-dir=.");
+                    return usage("cannot specify more than one of config-output-dir= or config-merge-dir=.");
                 }
                 configOutputDir = transformPath(getTokenValue(token));
                 if (token.startsWith("config-merge-dir=")) {
                     mergeConfigs.addDirectory(Paths.get(configOutputDir));
                 }
+            } else if (token.startsWith("config-to-omit=")) {
+                String omittedConfigDir = getTokenValue(token);
+                omittedConfigDir = transformPath(omittedConfigDir);
+                omittedConfigs.addDirectory(Paths.get(omittedConfigDir));
+            } else if (isBooleanOption(token, "experimental-omit-config-from-classpath")) {
+                experimentalOmitClasspathConfig = getBooleanTokenValue(token);
             } else if (token.startsWith("restrict-all-dir") || token.equals("restrict") || token.startsWith("restrict=")) {
                 warn("restrict mode is no longer supported, ignoring option: " + token);
             } else if (token.equals("no-builtin-caller-filter")) {
                 builtinCallerFilter = false;
-            } else if (token.startsWith("builtin-caller-filter=")) {
-                builtinCallerFilter = Boolean.parseBoolean(getTokenValue(token));
+            } else if (isBooleanOption(token, "builtin-caller-filter")) {
+                builtinCallerFilter = getBooleanTokenValue(token);
             } else if (token.equals("no-builtin-heuristic-filter")) {
                 builtinHeuristicFilter = false;
-            } else if (token.startsWith("builtin-heuristic-filter=")) {
-                builtinHeuristicFilter = Boolean.parseBoolean(getTokenValue(token));
-            } else if (token.equals("no-filter")) { // legacy
-                builtinCallerFilter = false;
-                builtinHeuristicFilter = false;
-            } else if (token.startsWith("no-filter=")) { // legacy
-                builtinCallerFilter = !Boolean.parseBoolean(getTokenValue(token));
+            } else if (isBooleanOption(token, "builtin-heuristic-filter")) {
+                builtinHeuristicFilter = getBooleanTokenValue(token);
+            } else if (isBooleanOption(token, "no-filter")) { // legacy
+                builtinCallerFilter = !getBooleanTokenValue(token);
                 builtinHeuristicFilter = builtinCallerFilter;
             } else if (token.startsWith("caller-filter-file=")) {
                 callerFilterFiles.add(getTokenValue(token));
             } else if (token.startsWith("access-filter-file=")) {
                 accessFilterFiles.add(getTokenValue(token));
-            } else if (token.equals("experimental-class-loader-support")) {
-                experimentalClassLoaderSupport = true;
-            } else if (token.startsWith("experimental-class-loader-support=")) {
-                experimentalClassLoaderSupport = Boolean.parseBoolean(getTokenValue(token));
+            } else if (isBooleanOption(token, "experimental-class-loader-support")) {
+                experimentalClassLoaderSupport = getBooleanTokenValue(token);
+            } else if (isBooleanOption(token, "experimental-class-define-support")) {
+                experimentalClassDefineSupport = getBooleanTokenValue(token);
+            } else if (isBooleanOption(token, "experimental-unsafe-allocation-support")) {
+                experimentalUnsafeAllocationSupport = getBooleanTokenValue(token);
             } else if (token.startsWith("config-write-period-secs=")) {
                 configWritePeriod = parseIntegerOrNegative(getTokenValue(token));
                 if (configWritePeriod <= 0) {
-                    return usage(1, "config-write-period-secs must be an integer greater than 0");
+                    return usage("config-write-period-secs must be an integer greater than 0");
                 }
             } else if (token.startsWith("config-write-initial-delay-secs=")) {
                 configWritePeriodInitialDelay = parseIntegerOrNegative(getTokenValue(token));
                 if (configWritePeriodInitialDelay < 0) {
-                    return usage(1, "config-write-initial-delay-secs must be an integer greater or equal to 0");
+                    return usage("config-write-initial-delay-secs must be an integer greater or equal to 0");
                 }
-            } else if (token.equals("build")) {
-                build = true;
-            } else if (token.startsWith("build=")) {
-                build = Boolean.parseBoolean(getTokenValue(token));
+            } else if (isBooleanOption(token, "experimental-configuration-with-origins")) {
+                configurationWithOrigins = getBooleanTokenValue(token);
+            } else if (token.startsWith("experimental-conditional-config-filter-file=")) {
+                conditionalConfigUserPackageFilterFiles.add(getTokenValue(token));
+            } else if (token.startsWith("conditional-config-class-filter-file=")) {
+                conditionalConfigClassNameFilterFiles.add(getTokenValue(token));
+            } else if (isBooleanOption(token, "experimental-conditional-config-part")) {
+                conditionalConfigPartialRun = getBooleanTokenValue(token);
+            } else if (isBooleanOption(token, "track-reflection-metadata")) {
+                trackReflectionMetadata = getBooleanTokenValue(token);
             } else {
-                return usage(1, "unknown option: '" + token + "'.");
+                return usage("unknown option: '" + token + "'.");
             }
         }
 
-        if (traceOutputFile == null && configOutputDir == null && !build) {
-            configOutputDir = transformPath(AGENT_NAME + "_config-pid{pid}-{datetime}/");
-            inform("no output/build options provided, tracking dynamic accesses and writing configuration to directory: " + configOutputDir);
+        if (!checkJVMVersion(jvmti)) {
+            return USAGE_ERROR;
         }
 
-        RuleNode callerFilter = null;
-        if (!builtinCallerFilter) {
-            callerFilter = RuleNode.createRoot();
-            callerFilter.addOrGetChildren("**", RuleNode.Inclusion.Include);
+        if (traceOutputFile == null && configOutputDir == null) {
+            configOutputDir = transformPath(AGENT_NAME + "_config-pid{pid}-{datetime}/");
+            inform("no output options provided, tracking dynamic accesses and writing configuration to directory: " + configOutputDir);
         }
+
+        if (configurationWithOrigins && !conditionalConfigUserPackageFilterFiles.isEmpty()) {
+            return error(USAGE_ERROR, "The agent can only be used in either the configuration with origins mode or the predefined classes mode.");
+        }
+
+        if (configurationWithOrigins && !mergeConfigs.isEmpty()) {
+            configurationWithOrigins = false;
+            inform("using configuration with origins with configuration merging is currently unsupported. Disabling configuration with origins mode.");
+        }
+
+        if (configurationWithOrigins) {
+            warn("using experimental configuration with origins mode. Note that native-image cannot process these files, and this flag may change or be removed without a warning!");
+        }
+
+        ComplexFilter callerFilter = null;
+        HierarchyFilterNode callerFilterHierarchyFilterNode = null;
+        if (!builtinCallerFilter) {
+            callerFilterHierarchyFilterNode = HierarchyFilterNode.createInclusiveRoot();
+            callerFilter = new ComplexFilter(callerFilterHierarchyFilterNode);
+        }
+
         if (!callerFilterFiles.isEmpty()) {
-            if (callerFilter == null) {
-                callerFilter = AccessAdvisor.copyBuiltinCallerFilterTree();
+            if (callerFilterHierarchyFilterNode == null) {
+                callerFilterHierarchyFilterNode = AccessAdvisor.copyBuiltinCallerFilterTree();
+                callerFilter = new ComplexFilter(callerFilterHierarchyFilterNode);
             }
             if (!parseFilterFiles(callerFilter, callerFilterFiles)) {
-                return 1;
+                return PARSE_ERROR;
             }
         }
 
-        RuleNode accessFilter = null;
+        ComplexFilter accessFilter = null;
         if (!accessFilterFiles.isEmpty()) {
-            accessFilter = AccessAdvisor.copyBuiltinAccessFilterTree();
+            accessFilter = new ComplexFilter(AccessAdvisor.copyBuiltinAccessFilterTree());
             if (!parseFilterFiles(accessFilter, accessFilterFiles)) {
-                return 1;
+                return PARSE_ERROR;
             }
         }
+
+        if (!conditionalConfigUserPackageFilterFiles.isEmpty() && conditionalConfigPartialRun) {
+            return error(USAGE_ERROR, "The agent can generate conditional configuration either for the current run or in the partial mode but not both at the same time.");
+        }
+
+        boolean isConditionalConfigurationRun = !conditionalConfigUserPackageFilterFiles.isEmpty() || conditionalConfigPartialRun;
+        boolean shouldTraceOriginInformation = configurationWithOrigins || isConditionalConfigurationRun;
+        final MethodInfoRecordKeeper recordKeeper = new MethodInfoRecordKeeper(shouldTraceOriginInformation);
+        final Supplier<InterceptedState> interceptedStateSupplier = shouldTraceOriginInformation ? EagerlyLoadedJavaStackAccess.stackAccessSupplier()
+                        : OnDemandJavaStackAccess.stackAccessSupplier();
 
         if (configOutputDir != null) {
             if (traceOutputFile != null) {
-                return usage(1, "can only once specify exactly one of trace-output=, config-output-dir= or config-merge-dir=.");
+                return usage("can only once specify exactly one of trace-output=, config-output-dir= or config-merge-dir=.");
             }
             try {
-                configOutputDirPath = Paths.get(configOutputDir);
-                if (!Files.exists(configOutputDirPath)) {
-                    Files.createDirectories(configOutputDirPath);
-                }
-                Function<IOException, Exception> handler = e -> {
-                    if (e instanceof NoSuchFileException) {
-                        warn("file " + ((NoSuchFileException) e).getFile() + " for merging could not be found, skipping");
-                        return null;
+                configOutputDirPath = Files.createDirectories(Path.of(configOutputDir));
+                configOutputLockFilePath = configOutputDirPath.resolve(ConfigurationFile.LOCK_FILE_NAME);
+                try {
+                    Files.writeString(configOutputLockFilePath, Long.toString(ProcessProperties.getProcessID()),
+                                    StandardOpenOption.CREATE_NEW, StandardOpenOption.WRITE);
+                } catch (FileAlreadyExistsException e) {
+                    String process;
+                    try {
+                        process = Files.readString(configOutputLockFilePath).stripTrailing();
+                    } catch (Exception ignored) {
+                        process = "(unknown)";
                     }
-                    return e; // rethrow
-                };
-                // Note that we cannot share use the same advisor for generating the configuration
-                // from parsing events and for enforcing restrictions because they are stateful.
-                // They should use the same filter sets, however.
+                    return error(AGENT_ERROR, "Output directory '" + configOutputDirPath + "' is locked by process " + process + ", " +
+                                    "which means another agent instance is already writing to this directory. " +
+                                    "Only one agent instance can safely write to a specific target directory at the same time. " +
+                                    "Unless file '" + ConfigurationFile.LOCK_FILE_NAME + "' is a leftover from an earlier process that terminated abruptly, it is unsafe to delete it. " +
+                                    "For running multiple processes with agents at the same time to create a single configuration, read AutomaticMetadataCollection.md " +
+                                    "or https://www.graalvm.org/dev/reference-manual/native-image/metadata/AutomaticMetadataCollection/ on how to use the native-image-configure tool.");
+                }
+                if (experimentalOmitClasspathConfig) {
+                    ignoreConfigFromClasspath(jvmti, omittedConfigs);
+                }
                 AccessAdvisor advisor = createAccessAdvisor(builtinHeuristicFilter, callerFilter, accessFilter);
-                TraceProcessor processor = new TraceProcessor(advisor, mergeConfigs.loadJniConfig(handler), mergeConfigs.loadReflectConfig(handler),
-                                mergeConfigs.loadProxyConfig(handler), mergeConfigs.loadResourceConfig(handler), mergeConfigs.loadSerializationConfig(handler));
-                traceWriter = new TraceProcessorWriterAdapter(processor);
+                TraceProcessor processor = new TraceProcessor(advisor);
+                ConfigurationSet omittedConfiguration = new ConfigurationSet();
+                Predicate<String> shouldExcludeClassesWithHash = null;
+                if (!omittedConfigs.isEmpty()) {
+                    Function<IOException, Exception> ignore = e -> {
+                        warn("Failed to load omitted config: " + e);
+                        return null;
+                    };
+                    omittedConfiguration = omittedConfigs.loadConfigurationSet(ignore, null, null);
+                    shouldExcludeClassesWithHash = omittedConfiguration.getPredefinedClassesConfiguration()::containsClassWithHash;
+                }
+
+                if (shouldTraceOriginInformation) {
+                    ConfigurationWithOriginsTracer configWithOriginsTracer = new ConfigurationWithOriginsTracer(processor, recordKeeper);
+                    tracer = configWithOriginsTracer;
+
+                    if (isConditionalConfigurationRun) {
+                        if (conditionalConfigPartialRun) {
+                            tracingResultWriter = new ConditionalConfigurationPartialRunWriter(configWithOriginsTracer);
+                        } else {
+                            ComplexFilter userCodeFilter = new ComplexFilter(HierarchyFilterNode.createRoot());
+                            if (!parseFilterFiles(userCodeFilter, conditionalConfigUserPackageFilterFiles)) {
+                                return PARSE_ERROR;
+                            }
+                            ComplexFilter classNameFilter;
+                            if (!conditionalConfigClassNameFilterFiles.isEmpty()) {
+                                classNameFilter = new ComplexFilter(HierarchyFilterNode.createRoot());
+                                if (!parseFilterFiles(classNameFilter, conditionalConfigClassNameFilterFiles)) {
+                                    return PARSE_ERROR;
+                                }
+                            } else {
+                                classNameFilter = new ComplexFilter(HierarchyFilterNode.createInclusiveRoot());
+                            }
+
+                            ConditionalConfigurationPredicate predicate = new ConditionalConfigurationPredicate(classNameFilter);
+                            tracingResultWriter = new ConditionalConfigurationWriter(configWithOriginsTracer, userCodeFilter, predicate);
+                        }
+                    } else {
+                        tracingResultWriter = new ConfigurationWithOriginsWriter(configWithOriginsTracer);
+                    }
+                } else {
+                    List<LazyValue<Path>> predefinedClassDestDirs = List.of(PredefinedClassesConfigurationParser.directorySupplier(configOutputDirPath));
+                    Function<IOException, Exception> handler = e -> {
+                        if (e instanceof NoSuchFileException) {
+                            warn("file " + ((NoSuchFileException) e).getFile() + " for merging could not be found, skipping");
+                            return null;
+                        } else if (e instanceof FileNotFoundException) {
+                            warn("could not open configuration file: " + e);
+                            return null;
+                        }
+                        return e; // rethrow
+                    };
+
+                    ConfigurationSet configuration = mergeConfigs.loadConfigurationSet(handler, predefinedClassDestDirs, shouldExcludeClassesWithHash);
+                    ConfigurationResultWriter writer = new ConfigurationResultWriter(processor, configuration, omittedConfiguration);
+                    tracer = writer;
+                    tracingResultWriter = writer;
+                }
+                expectedConfigModifiedBefore = getMostRecentlyModified(configOutputDirPath, getMostRecentlyModified(configOutputLockFilePath, null));
             } catch (Throwable t) {
-                return error(2, t.toString());
+                return error(AGENT_ERROR, t.toString());
             }
-        } else if (traceOutputFile != null) {
+        } else {
             try {
                 Path path = Paths.get(transformPath(traceOutputFile));
-                traceWriter = new TraceFileWriter(path);
+                TraceFileWriter writer = new TraceFileWriter(path);
+                tracer = writer;
+                tracingResultWriter = writer;
             } catch (Throwable t) {
-                return error(2, t.toString());
+                return error(AGENT_ERROR, t.toString());
             }
         }
 
-        if (build) {
-            int status = buildImage(jvmti);
-            if (status == 0) {
-                System.exit(status);
-            }
-            return status;
+        if (tracer != null) {
+            tracer.traceTrackReflectionMetadata(trackReflectionMetadata);
         }
 
-        accessAdvisor = createAccessAdvisor(builtinHeuristicFilter, callerFilter, accessFilter);
         try {
-            BreakpointInterceptor.onLoad(jvmti, callbacks, traceWriter, this, experimentalClassLoaderSupport);
+            BreakpointInterceptor.onLoad(jvmti, callbacks, tracer, this, interceptedStateSupplier,
+                            experimentalClassLoaderSupport, experimentalClassDefineSupport, experimentalUnsafeAllocationSupport, trackReflectionMetadata);
         } catch (Throwable t) {
-            return error(3, t.toString());
+            return error(AGENT_ERROR, t.toString());
         }
         try {
-            JniCallInterceptor.onLoad(traceWriter, this);
+            JniCallInterceptor.onLoad(tracer, this, interceptedStateSupplier);
         } catch (Throwable t) {
-            return error(4, t.toString());
+            return error(AGENT_ERROR, t.toString());
         }
 
         setupExecutorServiceForPeriodicConfigurationCapture(configWritePeriod, configWritePeriodInitialDelay);
-        return 0;
+        return SUCCESS;
     }
 
     private static void inform(String message) {
@@ -259,22 +407,52 @@ public final class NativeImageAgent extends JvmtiAgentBase<NativeImageAgentJNIHa
     }
 
     private static void warn(String message) {
-        inform("WARNING: " + message);
+        // Checkstyle: Allow raw info or warning printing - begin
+        inform("Warning: " + message);
+        // Checkstyle: Allow raw info or warning printing - end
     }
 
     private static <T> T error(T result, String message) {
-        inform("ERROR: " + message);
+        inform("Error: " + message);
         return result;
     }
 
-    private static <T> T usage(T result, String message) {
+    private static int usage(String message) {
         inform(message);
         inform("Example usage: -agentlib:native-image-agent=config-output-dir=/path/to/config-dir/");
-        inform("For details, please read BuildConfiguration.md or https://www.graalvm.org/reference-manual/native-image/BuildConfiguration/");
-        return result;
+        inform("For details, please read AutomaticMetadataCollection.md or https://www.graalvm.org/dev/reference-manual/native-image/metadata/AutomaticMetadataCollection/");
+        return USAGE_ERROR;
     }
 
-    private static AccessAdvisor createAccessAdvisor(boolean builtinHeuristicFilter, RuleNode callerFilter, RuleNode accessFilter) {
+    private static boolean checkJVMVersion(JvmtiEnv jvmti) {
+        String agentVersion = System.getProperty("java.vm.version");
+        int agentMajorVersion = Runtime.version().feature();
+
+        String vmVersion = Support.getSystemProperty(jvmti, "java.vm.version");
+        if (vmVersion == null) {
+            warn(String.format("Unable to determine the \"java.vm.version\" of the running JVM. Note that the JVM should have major version %d, otherwise metadata may be incorrect.",
+                            agentMajorVersion));
+            return true;
+        }
+
+        // Fail if the major versions differ.
+        String[] parts = vmVersion.split("\\D");
+        if (parts.length == 0 || Integer.parseInt(parts[0]) != agentMajorVersion) {
+            return error(false, String.format(
+                            "The current VM (%s) is incompatible with the agent, which was built for a JVM with major version %d. To resolve this issue, run the agent using a JVM with major version %d.",
+                            vmVersion, agentMajorVersion, agentMajorVersion));
+        }
+
+        // Warn if the VM is different.
+        if (!vmVersion.startsWith(agentVersion)) {
+            warn(String.format(
+                            "The running JVM (%s) is different from the JVM used to build the agent (%s). If the generated metadata is incorrect or incomplete, consider running the agent using the same JVM that built it.",
+                            vmVersion, agentVersion));
+        }
+        return true;
+    }
+
+    private static AccessAdvisor createAccessAdvisor(boolean builtinHeuristicFilter, ConfigurationFilter callerFilter, ConfigurationFilter accessFilter) {
         AccessAdvisor advisor = new AccessAdvisor();
         advisor.setHeuristicsEnabled(builtinHeuristicFilter);
         if (callerFilter != null) {
@@ -294,20 +472,20 @@ public final class NativeImageAgent extends JvmtiAgentBase<NativeImageAgentJNIHa
         }
     }
 
-    private static boolean parseFilterFiles(RuleNode filter, List<String> filterFiles) {
+    private static boolean parseFilterFiles(ComplexFilter filter, List<String> filterFiles) {
         for (String path : filterFiles) {
-            try (Reader reader = new FileReader(path)) {
-                new FilterConfigurationParser(filter).parseAndRegister(reader);
+            try {
+                new FilterConfigurationParser(filter).parseAndRegister(Paths.get(path).toUri());
             } catch (Exception e) {
                 return error(false, "cannot parse filter file " + path + ": " + e);
             }
         }
-        filter.removeRedundantNodes();
+        filter.getHierarchyFilterNode().removeRedundantNodes();
         return true;
     }
 
     private void setupExecutorServiceForPeriodicConfigurationCapture(int writePeriod, int initialDelay) {
-        if (traceWriter == null || configOutputDirPath == null) {
+        if (tracingResultWriter == null || configOutputDirPath == null || !tracingResultWriter.supportsPeriodicTraceWriting()) {
             return;
         }
 
@@ -328,47 +506,28 @@ public final class NativeImageAgent extends JvmtiAgentBase<NativeImageAgentJNIHa
                         initialDelay, writePeriod, TimeUnit.SECONDS);
     }
 
-    private static final Pattern propertyBlacklist = Pattern.compile("(java\\..*)|(sun\\..*)|(jvmci\\..*)");
-    private static final Pattern propertyWhitelist = Pattern.compile("(java\\.library\\.path)|(java\\.io\\.tmpdir)");
-
-    private static int buildImage(JvmtiEnv jvmti) {
-        System.out.println("Building native image ...");
+    private static void ignoreConfigFromClasspath(JvmtiEnv jvmti, ConfigurationFileCollection ignoredConfigCollection) {
         String classpath = Support.getSystemProperty(jvmti, "java.class.path");
-        if (classpath == null) {
-            return usage(1, "Build mode could not determine classpath.");
-        }
-        String javaCommand = Support.getSystemProperty(jvmti, "sun.java.command");
-        String mainClassMissing = "Build mode could not determine main class.";
-        if (javaCommand == null) {
-            return usage(1, mainClassMissing);
-        }
-        String mainClass = SubstrateUtil.split(javaCommand, " ")[0];
-        if (mainClass.isEmpty()) {
-            return usage(1, mainClassMissing);
-        }
-        List<String> buildArgs = new ArrayList<>();
-        // buildArgs.add("--verbose");
-        String[] keys = Support.getSystemProperties(jvmti);
-        for (String key : keys) {
-            boolean whitelisted = propertyWhitelist.matcher(key).matches();
-            boolean blacklisted = !whitelisted && propertyBlacklist.matcher(key).matches();
-            if (blacklisted) {
-                continue;
+        String sep = Support.getSystemProperty(jvmti, "path.separator");
+        if (sep == null) {
+            if (Platform.includedIn(Platform.LINUX.class) || Platform.includedIn(Platform.DARWIN.class)) {
+                sep = ":";
+            } else if (Platform.includedIn(Platform.WINDOWS.class)) {
+                sep = "[:;]";
+            } else {
+                warn("Running on unknown platform. Not omitting existing config from classpath.");
+                return;
             }
-            buildArgs.add("-D" + key + "=" + Support.getSystemProperty(jvmti, key));
         }
-        if (mainClass.toLowerCase().endsWith(".jar")) {
-            buildArgs.add("-jar");
-        } else {
-            buildArgs.addAll(Arrays.asList("-cp", classpath));
+
+        AgentMetaInfProcessor processor = new AgentMetaInfProcessor(ignoredConfigCollection);
+        for (String cpEntry : classpath.split(sep)) {
+            try {
+                NativeImageMetaInfWalker.walkMetaInfForCPEntry(Paths.get(cpEntry), processor);
+            } catch (NativeImageMetaInfWalker.MetaInfWalkException e) {
+                warn("Failed to walk the classpath entry: " + cpEntry + " Reason: " + e);
+            }
         }
-        buildArgs.add(mainClass);
-        buildArgs.add(AGENT_NAME + ".build");
-        // System.out.println(String.join("\n", buildArgs));
-        Path javaHome = Paths.get(Support.getSystemProperty(jvmti, "java.home"));
-        String userDirStr = Support.getSystemProperty(jvmti, "user.dir");
-        NativeImage.agentBuild(javaHome, userDirStr == null ? null : Paths.get(userDirStr), buildArgs);
-        return 0;
     }
 
     private static String transformPath(String path) {
@@ -386,69 +545,116 @@ public final class NativeImageAgent extends JvmtiAgentBase<NativeImageAgentJNIHa
 
     @Override
     protected void onVMInitCallback(JvmtiEnv jvmti, JNIEnvironment jni, JNIObjectHandle thread) {
-        accessAdvisor.setInLivePhase(true);
         BreakpointInterceptor.onVMInit(jvmti, jni);
-        if (traceWriter != null) {
-            traceWriter.tracePhaseChange("live");
+        if (tracer != null) {
+            tracer.tracePhaseChange("live");
         }
     }
 
     @Override
     protected void onVMStartCallback(JvmtiEnv jvmti, JNIEnvironment jni) {
         JniCallInterceptor.onVMStart(jvmti);
-        if (traceWriter != null) {
-            traceWriter.tracePhaseChange("start");
+        if (tracer != null) {
+            tracer.tracePhaseChange("start");
         }
     }
 
     @Override
     protected void onVMDeathCallback(JvmtiEnv jvmti, JNIEnvironment jni) {
-        accessAdvisor.setInLivePhase(false);
-        if (traceWriter != null) {
-            traceWriter.tracePhaseChange("dead");
+        if (tracer != null) {
+            tracer.tracePhaseChange("dead");
         }
     }
 
     private static final int MAX_WARNINGS_FOR_WRITING_CONFIGS_FAILURES = 5;
     private static int currentFailuresWritingConfigs = 0;
+    private static int currentFailuresModifiedTargetDirectory = 0;
 
     private void writeConfigurationFiles() {
+        Path tempDirectory = null;
         try {
-            final Path tempDirectory = configOutputDirPath.toFile().exists()
-                            ? Files.createTempDirectory(configOutputDirPath, "tempConfig-")
-                            : Files.createTempDirectory("tempConfig-");
-            TraceProcessor p = ((TraceProcessorWriterAdapter) traceWriter).getProcessor();
+            FileTime mostRecent = getMostRecentlyModified(configOutputDirPath, expectedConfigModifiedBefore);
 
-            Map<String, JsonPrintable> allConfigFiles = new HashMap<>(4);
-            allConfigFiles.put(ConfigurationFiles.REFLECTION_NAME, p.getReflectionConfiguration());
-            allConfigFiles.put(ConfigurationFiles.JNI_NAME, p.getJniConfiguration());
-            allConfigFiles.put(ConfigurationFiles.DYNAMIC_PROXY_NAME, p.getProxyConfiguration());
-            allConfigFiles.put(ConfigurationFiles.RESOURCES_NAME, p.getResourceConfiguration());
-            allConfigFiles.put(ConfigurationFiles.SERIALIZATION_NAME, p.getSerializationConfiguration());
+            // Write files first before failing any modification checks
+            tempDirectory = Files.createTempDirectory(configOutputDirPath, transformPath("agent-pid{pid}-{datetime}.tmp"));
+            List<Path> tempFilePaths = tracingResultWriter.writeToDirectory(tempDirectory);
 
-            for (Map.Entry<String, JsonPrintable> configFile : allConfigFiles.entrySet()) {
-                Path tempPath = tempDirectory.resolve(configFile.getKey());
-                try (JsonWriter writer = new JsonWriter(tempPath)) {
-                    configFile.getValue().printJson(writer);
-                }
+            if (!Files.exists(configOutputLockFilePath)) {
+                throw unexpectedlyModified(configOutputLockFilePath);
+            }
+            expectUnmodified(configOutputLockFilePath);
+            /*
+             * Checking for the modification of the whole configuration directory is not possible
+             * since predefined classes configuration outputs folders and files during the agent
+             * run.
+             */
+
+            Path[] targetFilePaths = new Path[tempFilePaths.size()];
+            for (int i = 0; i < tempFilePaths.size(); i++) {
+                Path fileName = tempDirectory.relativize(tempFilePaths.get(i));
+                targetFilePaths[i] = configOutputDirPath.resolve(fileName);
+                expectUnmodified(targetFilePaths[i]);
             }
 
-            for (Map.Entry<String, JsonPrintable> configFile : allConfigFiles.entrySet()) {
-                Path source = tempDirectory.resolve(configFile.getKey());
-                Path target = configOutputDirPath.resolve(configFile.getKey());
-                tryAtomicMove(source, target);
+            for (int i = 0; i < tempFilePaths.size(); i++) {
+                tryAtomicMove(tempFilePaths.get(i), targetFilePaths[i]);
+                mostRecent = getMostRecentlyModified(targetFilePaths[i], mostRecent);
             }
+            mostRecent = getMostRecentlyModified(configOutputDirPath, mostRecent);
+            expectedConfigModifiedBefore = mostRecent;
+
+            /*
+             * Note that sidecar files may be written directly to the final output directory, such
+             * as the class files from predefined class tracking. However, such files generally
+             * don't change once they have been written.
+             */
 
             compulsoryDelete(tempDirectory);
         } catch (IOException e) {
-            warnUpToLimit(currentFailuresWritingConfigs++, MAX_WARNINGS_FOR_WRITING_CONFIGS_FAILURES, "Error when writing configuration files: " + e.toString());
+            warnUpToLimit(currentFailuresWritingConfigs++, MAX_WARNINGS_FOR_WRITING_CONFIGS_FAILURES, "Error when writing configuration files: " + e);
+        } catch (ConcurrentModificationException e) {
+            warnUpToLimit(currentFailuresModifiedTargetDirectory++, MAX_WARNINGS_FOR_WRITING_CONFIGS_FAILURES,
+                            "file or directory '" + e.getMessage() + "' has been modified by another process. " +
+                                            "All output files remain in the temporary directory '" + configOutputDirPath.resolve("..").relativize(tempDirectory) + "'. " +
+                                            "Ensure that only one agent instance and no other processes are writing to the output directory '" + configOutputDirPath + "' at the same time. " +
+                                            "For running multiple processes with agents at the same time to create a single configuration, read AutomaticMetadataCollection.md " +
+                                            "or https://www.graalvm.org/dev/reference-manual/native-image/metadata/AutomaticMetadataCollection/ on how to use the native-image-configure tool.");
         }
     }
 
+    private void expectUnmodified(Path path) {
+        try {
+            if (Files.getLastModifiedTime(path).compareTo(expectedConfigModifiedBefore) > 0) {
+                throw unexpectedlyModified(path);
+            }
+        } catch (IOException ignored) {
+            // best effort
+        }
+    }
+
+    private static ConcurrentModificationException unexpectedlyModified(Path path) {
+        throw new ConcurrentModificationException(path.getFileName().toString());
+    }
+
+    private static FileTime getMostRecentlyModified(Path path, FileTime other) {
+        FileTime modified;
+        try {
+            modified = Files.getLastModifiedTime(path);
+        } catch (IOException ignored) {
+            return other; // best effort
+        }
+        return (other == null || other.compareTo(modified) < 0) ? modified : other;
+    }
+
+    @SuppressWarnings("BusyWait")
     private static void compulsoryDelete(Path pathToDelete) {
         final int maxRetries = 3;
         int retries = 0;
         while (pathToDelete.toFile().exists() && !pathToDelete.toFile().delete() && retries < maxRetries) {
+            try {
+                Thread.sleep((long) (100 + Math.random() * 500));
+            } catch (InterruptedException e) {
+            }
             retries++;
         }
     }
@@ -473,7 +679,7 @@ public final class NativeImageAgent extends JvmtiAgentBase<NativeImageAgentJNIHa
             Files.move(source, target, StandardCopyOption.REPLACE_EXISTING, StandardCopyOption.ATOMIC_MOVE);
         } catch (AtomicMoveNotSupportedException e) {
             warnUpToLimit(currentFailuresAtomicMove++, MAX_FAILURES_ATOMIC_MOVE,
-                            String.format("Could not move temporary configuration profile from (%s) to (%s) atomically. " +
+                            String.format("Could not move temporary configuration profile from '%s' to '%s' atomically. " +
                                             "This might result in inconsistencies.", source.toAbsolutePath(), target.toAbsolutePath()));
             Files.move(source, target, StandardCopyOption.REPLACE_EXISTING);
         }
@@ -490,14 +696,20 @@ public final class NativeImageAgent extends JvmtiAgentBase<NativeImageAgentJNIHa
             }
         }
 
-        if (traceWriter != null) {
-            traceWriter.tracePhaseChange("unload");
-            traceWriter.close();
-            if (configOutputDirPath != null) {
-                writeConfigurationFiles();
-                configOutputDirPath = null;
+        if (tracer != null) {
+            tracer.tracePhaseChange("unload");
+        }
+
+        if (tracingResultWriter != null) {
+            tracingResultWriter.close();
+            if (tracingResultWriter.supportsOnUnloadTraceWriting()) {
+                if (configOutputDirPath != null) {
+                    writeConfigurationFiles();
+                    compulsoryDelete(configOutputLockFilePath);
+                    configOutputLockFilePath = null;
+                    configOutputDirPath = null;
+                }
             }
-            traceWriter = null;
         }
 
         /*
@@ -514,7 +726,14 @@ public final class NativeImageAgent extends JvmtiAgentBase<NativeImageAgentJNIHa
          * The epilogue of this method does not tear down our VM: we don't seem to observe all
          * threads that end and therefore can't detach them, so we would wait forever for them.
          */
-        return 0;
+        return SUCCESS;
+    }
+
+    static class ExitCodes {
+        static final int SUCCESS = 0;
+        static final int USAGE_ERROR = 1;
+        static final int PARSE_ERROR = 2;
+        static final int AGENT_ERROR = 3;
     }
 
     @SuppressWarnings("unused")
