@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016, 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2016, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -28,77 +28,33 @@ import java.io.File;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.List;
-import java.util.regex.Pattern;
 
-import org.graalvm.compiler.options.OptionType;
-
-import com.oracle.svm.core.SubstrateOptions;
-import com.oracle.svm.driver.MacroOption.MacroOptionKind;
+import com.oracle.svm.core.option.OptionOrigin;
 import com.oracle.svm.driver.NativeImage.ArgumentQueue;
+import com.oracle.svm.util.LogUtils;
 
 class DefaultOptionHandler extends NativeImage.OptionHandler<NativeImage> {
 
-    private static final String verboseOption = "--verbose";
     private static final String requireValidJarFileMessage = "-jar requires a valid jarfile";
     private static final String newStyleClasspathOptionName = "--class-path";
 
-    static final String helpText = NativeImage.getResource("/Help.txt");
-    static final String helpExtraText = NativeImage.getResource("/HelpExtra.txt");
-    static final String noServerOption = SubstrateOptions.NO_SERVER;
-    static final String verboseServerOption = "--verbose-server";
-    static final String serverOptionPrefix = "--server-";
+    static final String addModulesOption = "--add-modules";
+    static final String limitModulesOption = "--limit-modules";
+    private static final String moduleSetModifierOptionErrorMessage = " requires modules to be specified";
+
+    static final String ADD_ENV_VAR_OPTION = "-E";
+
+    /* Defunct legacy options that we have to accept to maintain backward compatibility */
+    private static final String noServerOption = "--no-server";
 
     DefaultOptionHandler(NativeImage nativeImage) {
         super(nativeImage);
     }
 
-    boolean useDebugAttach = false;
-
-    private static void singleArgumentCheck(ArgumentQueue args, String arg) {
-        if (!args.isEmpty()) {
-            NativeImage.showError("Option " + arg + " cannot be combined with other options.");
-        }
-    }
-
-    private static final String javaRuntimeVersion = System.getProperty("java.runtime.version");
-
     @Override
     public boolean consume(ArgumentQueue args) {
         String headArg = args.peek();
         switch (headArg) {
-            case "--help":
-                args.poll();
-                singleArgumentCheck(args, headArg);
-                nativeImage.showMessage(helpText);
-                nativeImage.showNewline();
-                nativeImage.apiOptionHandler.printOptions(nativeImage::showMessage);
-                nativeImage.showNewline();
-                nativeImage.optionRegistry.showOptions(null, true, nativeImage::showMessage);
-                nativeImage.showNewline();
-                System.exit(0);
-                return true;
-            case "--version":
-                args.poll();
-                singleArgumentCheck(args, headArg);
-                String message;
-                if (NativeImage.IS_AOT) {
-                    message = System.getProperty("java.vm.version");
-                } else {
-                    message = "native-image " + NativeImage.graalvmVersion + " " + NativeImage.graalvmConfig;
-                }
-                message += " (Java Version " + javaRuntimeVersion + ")";
-                nativeImage.showMessage(message);
-                System.exit(0);
-                return true;
-            case "--help-extra":
-                args.poll();
-                singleArgumentCheck(args, headArg);
-                nativeImage.showMessage(helpExtraText);
-                nativeImage.optionRegistry.showOptions(MacroOptionKind.Macro, true, nativeImage::showMessage);
-                nativeImage.showNewline();
-                System.exit(0);
-                return true;
             case "-cp":
             case "-classpath":
             case newStyleClasspathOptionName:
@@ -127,19 +83,26 @@ class DefaultOptionHandler extends NativeImage.OptionHandler<NativeImage> {
                 }
                 String[] mainClassModuleArgParts = mainClassModuleArg.split("/", 2);
                 if (mainClassModuleArgParts.length > 1) {
-                    nativeImage.addPlainImageBuilderArg(nativeImage.oHClass + mainClassModuleArgParts[1]);
+                    nativeImage.addPlainImageBuilderArg(nativeImage.oHClass + mainClassModuleArgParts[1], OptionOrigin.originDriver);
                 }
-                nativeImage.addPlainImageBuilderArg(nativeImage.oHModule + mainClassModuleArgParts[0]);
+                nativeImage.addPlainImageBuilderArg(nativeImage.oHModule + mainClassModuleArgParts[0], OptionOrigin.originDriver);
+                nativeImage.setModuleOptionMode(true);
                 return true;
-            case "--configurations-path":
+            case addModulesOption:
                 args.poll();
-                String configPath = args.poll();
-                if (configPath == null) {
-                    NativeImage.showError(headArg + " requires a " + File.pathSeparator + " separated list of directories");
+                String addModulesArgs = args.poll();
+                if (addModulesArgs == null) {
+                    NativeImage.showError(headArg + moduleSetModifierOptionErrorMessage);
                 }
-                for (String configDir : configPath.split(File.pathSeparator)) {
-                    nativeImage.addMacroOptionRoot(nativeImage.canonicalize(Paths.get(configDir)));
+                nativeImage.addAddedModules(addModulesArgs);
+                return true;
+            case limitModulesOption:
+                args.poll();
+                String limitModulesArgs = args.poll();
+                if (limitModulesArgs == null) {
+                    NativeImage.showError(headArg + moduleSetModifierOptionErrorMessage);
                 }
+                nativeImage.addLimitedModules(limitModulesArgs);
                 return true;
             case "-jar":
                 args.poll();
@@ -150,60 +113,21 @@ class DefaultOptionHandler extends NativeImage.OptionHandler<NativeImage> {
                 handleJarFileArg(nativeImage.canonicalize(Paths.get(jarFilePathStr)));
                 nativeImage.setJarOptionMode(true);
                 return true;
-            case verboseOption:
+            case "--diagnostics-mode":
                 args.poll();
-                nativeImage.setVerbose(true);
-                return true;
-            case "--dry-run":
-                args.poll();
-                nativeImage.setDryRun(true);
-                return true;
-            case "--expert-options":
-                args.poll();
-                nativeImage.setPrintFlagsOptionQuery(OptionType.User.name());
-                return true;
-            case "--expert-options-all":
-                args.poll();
-                nativeImage.setPrintFlagsOptionQuery("");
-                return true;
-            case "--expert-options-detail":
-                args.poll();
-                String optionNames = args.poll();
-                nativeImage.setPrintFlagsWithExtraHelpOptionQuery(optionNames);
+                nativeImage.enableDiagnostics();
+                nativeImage.addPlainImageBuilderArg("-H:+DiagnosticsMode");
+                nativeImage.addPlainImageBuilderArg("-H:DiagnosticsDir=" + nativeImage.diagnosticsDir);
+                System.out.println("# Diagnostics mode enabled: image-build reports are saved to " + nativeImage.diagnosticsDir);
                 return true;
             case noServerOption:
-            case verboseServerOption:
                 args.poll();
-                NativeImage.showWarning("Ignoring server-mode native-image argument " + headArg + ".");
+                LogUtils.warning("Ignoring server-mode native-image argument " + headArg + ".");
                 return true;
-            case "--exclude-config":
+            case "--enable-preview":
                 args.poll();
-                String excludeJar = args.poll();
-                if (excludeJar == null) {
-                    NativeImage.showError(headArg + " requires two arguments: a jar regular expression and a resource regular expression");
-                }
-                String excludeConfig = args.poll();
-                if (excludeConfig == null) {
-                    NativeImage.showError(headArg + " requires resource regular expression");
-                }
-                nativeImage.addExcludeConfig(Pattern.compile(excludeJar), Pattern.compile(excludeConfig));
+                nativeImage.addCustomJavaArgs("--enable-preview");
                 return true;
-        }
-
-        String debugAttach = "--debug-attach";
-        if (headArg.startsWith(debugAttach)) {
-            if (useDebugAttach) {
-                throw NativeImage.showError("The " + debugAttach + " option can only be used once.");
-            }
-            useDebugAttach = true;
-            String debugAttachArg = args.poll();
-            String addressSuffix = debugAttachArg.substring(debugAttach.length());
-            String address = addressSuffix.isEmpty() ? "8000" : addressSuffix.substring(1);
-            /* Using agentlib to allow interoperability with other agents */
-            nativeImage.addImageBuilderJavaArgs("-agentlib:jdwp=transport=dt_socket,server=y,address=" + address + ",suspend=y");
-            /* Disable watchdog mechanism */
-            nativeImage.addPlainImageBuilderArg(nativeImage.oHDeadlockWatchdogInterval + "0");
-            return true;
         }
 
         String singleArgClasspathPrefix = newStyleClasspathOptionName + "=";
@@ -217,12 +141,12 @@ class DefaultOptionHandler extends NativeImage.OptionHandler<NativeImage> {
         }
         if (headArg.startsWith(NativeImage.oH)) {
             args.poll();
-            nativeImage.addCustomImageBuilderArgs(NativeImage.injectHostedOptionOrigin(headArg, args.argumentOrigin));
+            nativeImage.addPlainImageBuilderArg(headArg, args.argumentOrigin);
             return true;
         }
         if (headArg.startsWith(NativeImage.oR)) {
             args.poll();
-            nativeImage.addCustomImageBuilderArgs(headArg);
+            nativeImage.addPlainImageBuilderArg(headArg);
             return true;
         }
         String javaArgsPrefix = "-D";
@@ -242,6 +166,14 @@ class DefaultOptionHandler extends NativeImage.OptionHandler<NativeImage> {
             nativeImage.addOptionKeyValue(keyValue[0], keyValue[1]);
             return true;
         }
+        if (headArg.startsWith(ADD_ENV_VAR_OPTION)) {
+            args.poll();
+            String envVarSetting = headArg.substring(ADD_ENV_VAR_OPTION.length());
+            String[] keyValue = envVarSetting.split("=", 2);
+            String valueDefinedOrInherited = keyValue.length > 1 ? keyValue[1] : null;
+            nativeImage.imageBuilderEnvironment.put(keyValue[0], valueDefinedOrInherited);
+            return true;
+        }
         if (headArg.startsWith("-J")) {
             args.poll();
             if (headArg.equals("-J")) {
@@ -251,19 +183,22 @@ class DefaultOptionHandler extends NativeImage.OptionHandler<NativeImage> {
             }
             return true;
         }
-        String optimizeOption = "-O";
-        if (headArg.startsWith(optimizeOption)) {
+        if (headArg.startsWith(addModulesOption + "=")) {
             args.poll();
-            if (headArg.equals(optimizeOption)) {
-                NativeImage.showError("The " + optimizeOption + " option should not be followed by a space");
-            } else {
-                nativeImage.addPlainImageBuilderArg(nativeImage.oHOptimize + headArg.substring(2));
+            String addModulesArgs = headArg.substring(addModulesOption.length() + 1);
+            if (addModulesArgs.isEmpty()) {
+                NativeImage.showError(headArg + moduleSetModifierOptionErrorMessage);
             }
+            nativeImage.addAddedModules(addModulesArgs);
             return true;
         }
-        if (headArg.startsWith(serverOptionPrefix)) {
+        if (headArg.startsWith(limitModulesOption + "=")) {
             args.poll();
-            NativeImage.showWarning("Ignoring server-mode native-image argument " + headArg + ".");
+            String limitModulesArgs = headArg.substring(limitModulesOption.length() + 1);
+            if (limitModulesArgs.isEmpty()) {
+                NativeImage.showError(headArg + moduleSetModifierOptionErrorMessage);
+            }
+            nativeImage.addLimitedModules(limitModulesArgs);
             return true;
         }
         return false;
@@ -279,24 +214,30 @@ class DefaultOptionHandler extends NativeImage.OptionHandler<NativeImage> {
 
     private void processModulePathArgs(String mpArgs) {
         for (String mpEntry : mpArgs.split(File.pathSeparator, Integer.MAX_VALUE)) {
-            nativeImage.addImageModulePath(Paths.get(mpEntry));
+            nativeImage.addImageModulePath(Paths.get(mpEntry), false, true);
         }
     }
 
-    private void handleJarFileArg(Path filePath) {
-        if (Files.isDirectory(filePath)) {
-            NativeImage.showError(filePath + " is a directory. (" + requireValidJarFileMessage + ")");
+    private void handleJarFileArg(Path jarFilePath) {
+        if (Files.isDirectory(jarFilePath)) {
+            NativeImage.showError(jarFilePath + " is a directory. (" + requireValidJarFileMessage + ")");
         }
-        if (!NativeImage.processJarManifestMainAttributes(filePath, nativeImage::handleMainClassAttribute)) {
-            NativeImage.showError("No manifest in " + filePath);
+        String jarFileName = jarFilePath.getFileName().toString();
+        String jarSuffix = ".jar";
+        String jarFileNameBase;
+        if (jarFileName.endsWith(jarSuffix)) {
+            jarFileNameBase = jarFileName.substring(0, jarFileName.length() - jarSuffix.length());
+        } else {
+            jarFileNameBase = jarFileName;
         }
-        nativeImage.addCustomImageClasspath(filePath);
-    }
-
-    @Override
-    void addFallbackBuildArgs(List<String> buildArgs) {
-        if (nativeImage.isVerbose()) {
-            buildArgs.add(verboseOption);
+        if (!jarFileNameBase.isEmpty()) {
+            String origin = "manifest from " + jarFilePath.toUri();
+            nativeImage.addPlainImageBuilderArg(nativeImage.oHName + jarFileNameBase, origin, false);
         }
+        Path finalFilePath = nativeImage.useBundle() ? nativeImage.bundleSupport.substituteClassPath(jarFilePath) : jarFilePath;
+        if (!NativeImage.processJarManifestMainAttributes(finalFilePath, nativeImage::handleManifestFileAttributes)) {
+            NativeImage.showError("No manifest in " + finalFilePath);
+        }
+        nativeImage.addCustomImageClasspath(finalFilePath);
     }
 }
