@@ -30,34 +30,30 @@ import java.util.IdentityHashMap;
 import java.util.Map;
 import java.util.function.Function;
 
-import org.graalvm.compiler.core.common.FieldIntrospection;
-import org.graalvm.compiler.core.common.Fields;
-import org.graalvm.compiler.graph.Edges;
-import org.graalvm.compiler.graph.Node;
-import org.graalvm.compiler.graph.NodeClass;
-import org.graalvm.compiler.lir.CompositeValue;
-import org.graalvm.compiler.lir.CompositeValueClass;
-import org.graalvm.compiler.lir.LIRInstruction;
-import org.graalvm.compiler.lir.LIRInstructionClass;
-import org.graalvm.compiler.serviceprovider.GraalUnsafeAccess;
+import org.graalvm.collections.EconomicMap;
 import org.graalvm.nativeimage.ImageSingletons;
 import org.graalvm.nativeimage.hosted.Feature;
 
-import com.oracle.graal.pointsto.api.DefaultUnsafePartition;
-import com.oracle.svm.core.annotate.RecomputeFieldValue;
-import com.oracle.svm.core.graal.GraalEdgeUnsafePartition;
+import com.oracle.graal.pointsto.meta.AnalysisField;
+import com.oracle.graal.pointsto.meta.AnalysisType;
+import com.oracle.svm.core.BuildPhaseProvider;
+import com.oracle.svm.core.fieldvaluetransformer.FieldValueTransformerWithAvailability;
 import com.oracle.svm.core.util.VMError;
-import com.oracle.svm.graal.GraalSupport;
+import com.oracle.svm.graal.GraalCompilerSupport;
 import com.oracle.svm.hosted.FeatureImpl.BeforeAnalysisAccessImpl;
 import com.oracle.svm.hosted.FeatureImpl.CompilationAccessImpl;
 import com.oracle.svm.hosted.FeatureImpl.DuringAnalysisAccessImpl;
 import com.oracle.svm.hosted.FeatureImpl.DuringSetupAccessImpl;
 import com.oracle.svm.hosted.meta.HostedMetaAccess;
-import com.oracle.svm.util.UnsafePartitionKind;
 
-import jdk.vm.ci.meta.MetaAccessProvider;
-import jdk.vm.ci.meta.ResolvedJavaField;
-import sun.misc.Unsafe;
+import jdk.graal.compiler.core.common.FieldIntrospection;
+import jdk.graal.compiler.core.common.Fields;
+import jdk.graal.compiler.graph.Edges;
+import jdk.graal.compiler.graph.Node;
+import jdk.graal.compiler.graph.NodeClass;
+import jdk.graal.compiler.lir.LIRInstruction;
+import jdk.graal.compiler.lir.LIRInstructionClass;
+import jdk.internal.misc.Unsafe;
 
 /**
  * Graal uses unsafe memory accesses to access {@link Node}s and {@link LIRInstruction}s. The
@@ -68,11 +64,14 @@ import sun.misc.Unsafe;
  */
 public class FieldsOffsetsFeature implements Feature {
 
-    private static final Unsafe UNSAFE = GraalUnsafeAccess.getUnsafe();
-
-    abstract static class IterationMaskRecomputation implements RecomputeFieldValue.CustomFieldValueComputer {
+    abstract static class IterationMaskRecomputation implements FieldValueTransformerWithAvailability {
         @Override
-        public Object compute(MetaAccessProvider metaAccess, ResolvedJavaField original, ResolvedJavaField annotated, Object receiver) {
+        public boolean isAvailable() {
+            return BuildPhaseProvider.isHostedUniverseBuilt();
+        }
+
+        @Override
+        public Object transform(Object receiver, Object originalValue) {
             Edges edges = getEdges((NodeClass<?>) receiver);
             FieldsOffsetsReplacement replacement = FieldsOffsetsFeature.getReplacements().get(edges.getOffsets());
             assert replacement.fields == edges;
@@ -156,20 +155,21 @@ public class FieldsOffsetsFeature implements Feature {
     /* Invoked once for every class that is reachable in the native image. */
     private static void classReachabilityListener(DuringAnalysisAccess a, Class<?> newlyReachableClass) {
         DuringAnalysisAccessImpl access = (DuringAnalysisAccessImpl) a;
+        if (BuildPhaseProvider.isAnalysisFinished()) {
+            throw VMError.shouldNotReachHere("New class reachable after analysis: " + newlyReachableClass);
+        }
 
         if (Node.class.isAssignableFrom(newlyReachableClass) && newlyReachableClass != Node.class) {
-            FieldsOffsetsFeature.<NodeClass<?>> registerClass(newlyReachableClass, GraalSupport.get().nodeClasses, NodeClass::get, false, access);
+            FieldsOffsetsFeature.<NodeClass<?>> registerClass(newlyReachableClass, GraalCompilerSupport.get().nodeClasses, NodeClass::get, false, access);
 
         } else if (LIRInstruction.class.isAssignableFrom(newlyReachableClass) && newlyReachableClass != LIRInstruction.class) {
-            FieldsOffsetsFeature.<LIRInstructionClass<?>> registerClass(newlyReachableClass, GraalSupport.get().instructionClasses, LIRInstructionClass::get, true, access);
+            FieldsOffsetsFeature.<LIRInstructionClass<?>> registerClass(newlyReachableClass, GraalCompilerSupport.get().instructionClasses, LIRInstructionClass::get, true, access);
 
-        } else if (CompositeValue.class.isAssignableFrom(newlyReachableClass) && newlyReachableClass != CompositeValue.class) {
-            FieldsOffsetsFeature.<CompositeValueClass<?>> registerClass(newlyReachableClass, GraalSupport.get().compositeValueClasses, CompositeValueClass::get, true, access);
         }
     }
 
-    private static <R extends FieldIntrospection<?>> void registerClass(Class<?> clazz, Map<Class<?>, R> registry, Function<Class<?>, R> lookup, boolean excludeAbstract,
-                    DuringAnalysisAccessImpl access) {
+    private static <R extends FieldIntrospection<?>> void registerClass(Class<?> clazz, EconomicMap<Class<?>, R> registry,
+                    Function<Class<?>, R> lookup, boolean excludeAbstract, DuringAnalysisAccessImpl access) {
         assert !registry.containsKey(clazz);
 
         if (!excludeAbstract || !Modifier.isAbstract(clazz.getModifiers())) {
@@ -185,30 +185,36 @@ public class FieldsOffsetsFeature implements Feature {
         if (introspection instanceof NodeClass<?>) {
             NodeClass<?> nodeClass = (NodeClass<?>) introspection;
 
+            /* The partial evaluator allocates Node classes via Unsafe. */
+            AnalysisType nodeType = config.getMetaAccess().lookupJavaType(nodeClass.getJavaClass());
+            nodeType.registerInstantiatedCallback(unused -> config.registerAsUnsafeAllocated(nodeType));
+
             Fields dataFields = nodeClass.getData();
-            registerFields(dataFields, DefaultUnsafePartition.get(), config);
+            registerFields(dataFields, config, "Graal node data field");
 
             Fields inputEdges = nodeClass.getInputEdges();
-            registerFields(inputEdges, GraalEdgeUnsafePartition.get(), config);
+            registerFields(inputEdges, config, "Graal node input edge");
 
             Fields successorEdges = nodeClass.getSuccessorEdges();
-            registerFields(successorEdges, GraalEdgeUnsafePartition.get(), config);
+            registerFields(successorEdges, config, "Graal node successor edge");
 
             /* Ensure field shortName is initialized, so that the instance is immutable. */
             nodeClass.shortName();
 
         } else {
             for (Fields fields : introspection.getAllFields()) {
-                registerFields(fields, DefaultUnsafePartition.get(), config);
+                registerFields(fields, config, "Graal field");
             }
         }
     }
 
-    private static void registerFields(Fields fields, UnsafePartitionKind partitionKind, BeforeAnalysisAccessImpl config) {
+    private static void registerFields(Fields fields, BeforeAnalysisAccessImpl config, Object reason) {
         getReplacements().put(fields.getOffsets(), new FieldsOffsetsReplacement(fields));
 
         for (int i = 0; i < fields.getCount(); i++) {
-            config.registerAsUnsafeAccessed(config.getMetaAccess().lookupJavaField(findField(fields, i)), partitionKind);
+            AnalysisField aField = config.getMetaAccess().lookupJavaField(findField(fields, i));
+            aField.getType().registerAsReachable(aField);
+            config.registerAsUnsafeAccessed(aField, reason);
         }
     }
 
@@ -230,7 +236,7 @@ public class FieldsOffsetsFeature implements Feature {
             long[] newOffsets = new long[fields.getCount()];
             for (int i = 0; i < newOffsets.length; i++) {
                 Field field = findField(fields, i);
-                assert UNSAFE.objectFieldOffset(field) == fields.getOffsets()[i];
+                assert Unsafe.getUnsafe().objectFieldOffset(field) == fields.getOffsets()[i];
                 newOffsets[i] = hMetaAccess.lookupJavaField(field).getLocation();
             }
             replacement.newOffsets = newOffsets;
@@ -247,7 +253,7 @@ public class FieldsOffsetsFeature implements Feature {
 
     @Override
     public void afterCompilation(AfterCompilationAccess access) {
-        access.registerAsImmutable(GraalSupport.get().nodeClasses.values(), o -> true);
-        access.registerAsImmutable(GraalSupport.get().instructionClasses.values(), o -> true);
+        access.registerAsImmutable(GraalCompilerSupport.get().nodeClasses.getValues(), o -> true);
+        access.registerAsImmutable(GraalCompilerSupport.get().instructionClasses.getValues(), o -> true);
     }
 }
