@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * The Universal Permissive License (UPL), Version 1.0
@@ -40,36 +40,30 @@
  */
 package com.oracle.truffle.polyglot;
 
-import static com.oracle.truffle.api.CompilerDirectives.shouldNotReachHere;
-
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.PrintStream;
-import java.net.URL;
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
-import java.util.Enumeration;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.Objects;
-import java.util.Properties;
 import java.util.ServiceLoader;
 import java.util.Set;
 import java.util.TreeSet;
 import java.util.function.Supplier;
+import java.util.stream.Stream;
+import java.util.stream.StreamSupport;
 
 import com.oracle.truffle.api.TruffleOptions;
 import com.oracle.truffle.api.instrumentation.TruffleInstrument;
 import com.oracle.truffle.api.instrumentation.TruffleInstrument.Registration;
+import com.oracle.truffle.api.instrumentation.provider.TruffleInstrumentProvider;
 import com.oracle.truffle.polyglot.EngineAccessor.AbstractClassLoaderSupplier;
 import com.oracle.truffle.polyglot.EngineAccessor.StrongClassLoaderSupplier;
+import org.graalvm.polyglot.SandboxPolicy;
 
 final class InstrumentCache {
-
     private static final List<InstrumentCache> nativeImageCache = TruffleOptions.AOT ? new ArrayList<>() : null;
     private static Map<List<AbstractClassLoaderSupplier>, List<InstrumentCache>> runtimeCaches = new HashMap<>();
 
@@ -77,9 +71,12 @@ final class InstrumentCache {
     private final String id;
     private final String name;
     private final String version;
+    private final String website;
     private final boolean internal;
     private final Set<String> services;
-    private final InstrumentReflection instrumentReflection;
+    private final TruffleInstrumentProvider provider;
+    private final SandboxPolicy sandboxPolicy;
+    private final Map<String, InternalResourceCache> internalResources;
 
     /**
      * Initializes state for native image generation.
@@ -90,7 +87,22 @@ final class InstrumentCache {
      */
     @SuppressWarnings("unused")
     private static void initializeNativeImageState(ClassLoader imageClassLoader) {
-        nativeImageCache.addAll(doLoad(Arrays.asList(new StrongClassLoaderSupplier(imageClassLoader))));
+        nativeImageCache.addAll(doLoad(List.of(new StrongClassLoaderSupplier(imageClassLoader))));
+    }
+
+    /**
+     * Collect tools included in a native image.
+     *
+     * NOTE: this method is called reflectively by TruffleBaseFeature
+     */
+    @SuppressWarnings("unused")
+    private static Set<String> collectInstruments() {
+        assert TruffleOptions.AOT : "Only supported during image generation";
+        Set<String> res = new HashSet<>();
+        for (InstrumentCache instrumentCache : nativeImageCache) {
+            res.add(instrumentCache.id);
+        }
+        return res;
     }
 
     /**
@@ -104,21 +116,21 @@ final class InstrumentCache {
         runtimeCaches.clear();
     }
 
-    private InstrumentCache(String id, String name, String version, String className, boolean internal, Set<String> services, InstrumentReflection instrumentReflection) {
-        this.instrumentReflection = instrumentReflection;
+    private InstrumentCache(String id, String name, String version, String className, boolean internal, Set<String> services,
+                    TruffleInstrumentProvider provider, String website, SandboxPolicy sandboxPolicy, Map<String, InternalResourceCache> internalResources) {
         this.id = id;
         this.name = name;
         this.version = version;
+        this.website = website;
         this.className = className;
         this.internal = internal;
         this.services = services;
-
-        if (TruffleOptions.AOT) {
-            instrumentReflection.aotInitializeAtBuildTime();
-        }
+        this.provider = provider;
+        this.sandboxPolicy = sandboxPolicy;
+        this.internalResources = internalResources;
     }
 
-    public boolean isInternal() {
+    boolean isInternal() {
         return internal;
     }
 
@@ -137,19 +149,96 @@ final class InstrumentCache {
         }
     }
 
+    static Collection<InstrumentCache> internalInstruments() {
+        Set<InstrumentCache> result = new HashSet<>();
+        for (InstrumentCache i : load()) {
+            if (i.isInternal()) {
+                result.add(i);
+            }
+        }
+        return result;
+    }
+
     static List<InstrumentCache> doLoad(List<AbstractClassLoaderSupplier> suppliers) {
         List<InstrumentCache> list = new ArrayList<>();
         Set<String> classNamesUsed = new HashSet<>();
-        for (Supplier<ClassLoader> supplier : suppliers) {
-            Loader.load(supplier.get(), list, classNamesUsed);
-        }
-        Collections.sort(list, new Comparator<InstrumentCache>() {
-            @Override
-            public int compare(InstrumentCache o1, InstrumentCache o2) {
-                return o1.getId().compareTo(o2.getId());
+        ClassLoader truffleClassLoader = InstrumentCache.class.getClassLoader();
+        boolean usesTruffleClassLoader = false;
+        Map<String, Map<String, Supplier<InternalResourceCache>>> optionalResources = InternalResourceCache.loadOptionalInternalResources(suppliers);
+        for (AbstractClassLoaderSupplier supplier : suppliers) {
+            ClassLoader loader = supplier.get();
+            if (loader == null) {
+                continue;
             }
-        });
+            usesTruffleClassLoader |= truffleClassLoader == loader;
+            loadProviders(loader).filter((p) -> supplier.accepts(p.getClass())).forEach((p) -> loadInstrumentImpl(p, list, classNamesUsed, optionalResources));
+        }
+        /*
+         * Resolves a missing debugger instrument when the GuestLangToolsClassLoader does not define
+         * module. If the ClassLoader does not define module it has no ServiceCatalog. The
+         * ServiceLoader does not load module services from parent classloader. This code can be
+         * removed if we add system classloader into GraalVMLocator.
+         */
+        if (!usesTruffleClassLoader) {
+            Module truffleModule = InstrumentCache.class.getModule();
+            loadProviders(truffleClassLoader).//
+                            filter((p) -> p.getClass().getModule().equals(truffleModule)).//
+                            forEach((p) -> loadInstrumentImpl(p, list, classNamesUsed, optionalResources));
+        }
+        list.sort(Comparator.comparing(InstrumentCache::getId));
         return list;
+    }
+
+    private static Stream<? extends TruffleInstrumentProvider> loadProviders(ClassLoader loader) {
+        return StreamSupport.stream(ServiceLoader.load(TruffleInstrumentProvider.class, loader).spliterator(), false);
+    }
+
+    private static void loadInstrumentImpl(TruffleInstrumentProvider provider, List<? super InstrumentCache> list, Set<? super String> classNamesUsed,
+                    Map<String, Map<String, Supplier<InternalResourceCache>>> optionalResources) {
+        Class<?> providerClass = provider.getClass();
+        Module providerModule = providerClass.getModule();
+        JDKSupport.exportTransitivelyTo(providerModule);
+        /*
+         * Forward the native access capability to all loaded tools.
+         */
+        JDKSupport.enableNativeAccess(providerModule);
+        Registration reg = providerClass.getAnnotation(Registration.class);
+        if (reg == null) {
+            emitWarning("Warning Truffle instrument ignored: Provider %s is missing @Registration annotation.", providerClass);
+            return;
+        }
+        String className = EngineAccessor.INSTRUMENT_PROVIDER.getInstrumentClassName(provider);
+        String name = reg.name();
+        String id = reg.id();
+        if (id == null || id.isEmpty()) {
+            /* use class name default id */
+            int lastIndex = className.lastIndexOf('$');
+            if (lastIndex == -1) {
+                lastIndex = className.lastIndexOf('.');
+            }
+            id = className.substring(lastIndex + 1);
+        }
+        String version = reg.version();
+        String website = reg.website();
+        SandboxPolicy sandboxPolicy = reg.sandbox();
+        boolean internal = reg.internal();
+        Set<String> servicesClassNames = new TreeSet<>(EngineAccessor.INSTRUMENT_PROVIDER.getServicesClassNames(provider));
+        Map<String, InternalResourceCache> resources = new HashMap<>();
+        for (String resourceId : EngineAccessor.INSTRUMENT_PROVIDER.getInternalResourceIds(provider)) {
+            resources.put(resourceId, new InternalResourceCache(id, resourceId, () -> EngineAccessor.INSTRUMENT_PROVIDER.createInternalResource(provider, resourceId)));
+        }
+        for (Map.Entry<String, Supplier<InternalResourceCache>> resourceSupplier : optionalResources.getOrDefault(id, Map.of()).entrySet()) {
+            InternalResourceCache resource = resourceSupplier.getValue().get();
+            InternalResourceCache old = resources.put(resourceSupplier.getKey(), resource);
+            if (old != null) {
+                throw InternalResourceCache.throwDuplicateOptionalResourceException(old, resource);
+            }
+        }
+        // we don't want multiple instruments with the same class name
+        if (!classNamesUsed.contains(className)) {
+            classNamesUsed.add(className);
+            list.add(new InstrumentCache(id, name, version, className, internal, servicesClassNames, provider, website, sandboxPolicy, Collections.unmodifiableMap(resources)));
+        }
     }
 
     String getId() {
@@ -169,7 +258,7 @@ final class InstrumentCache {
     }
 
     TruffleInstrument loadInstrument() {
-        return instrumentReflection.newInstance();
+        return (TruffleInstrument) EngineAccessor.INSTRUMENT_PROVIDER.create(provider);
     }
 
     boolean supportsService(Class<?> clazz) {
@@ -180,258 +269,27 @@ final class InstrumentCache {
         return services.toArray(new String[0]);
     }
 
-    private abstract static class InstrumentReflection {
-
-        abstract TruffleInstrument newInstance();
-
-        abstract Class<? extends TruffleInstrument> aotInitializeAtBuildTime();
+    InternalResourceCache getResourceCache(String resourceId) {
+        return internalResources.get(resourceId);
     }
 
-    private abstract static class Loader {
-
-        static void load(ClassLoader loader, List<? super InstrumentCache> list, Set<? super String> classNamesUsed) {
-            if (loader == null) {
-                return;
-            }
-            try {
-                Class<?> truffleInstrumentClassAsSeenByLoader = Class.forName(TruffleInstrument.class.getName(), true, loader);
-                if (truffleInstrumentClassAsSeenByLoader != TruffleInstrument.class) {
-                    return;
-                }
-            } catch (ClassNotFoundException ex) {
-                return;
-            }
-            LegacyLoader.INSTANCE.loadImpl(loader, list, classNamesUsed);
-            ServicesLoader.INSTANCE.loadImpl(loader, list, classNamesUsed);
-        }
-
-        static void exportTruffle(ClassLoader loader) {
-            if (!TruffleOptions.AOT) {
-                // In JDK 9+, the Truffle API packages must be dynamically exported to
-                // a Truffle instrument since the Truffle API module descriptor only
-                // exports the packages to modules known at build time (such as the
-                // Graal module).
-                EngineAccessor.JDKSERVICES.exportTo(loader, null);
-            }
-        }
-
-        abstract void loadImpl(ClassLoader loader, List<? super InstrumentCache> list, Set<? super String> classNamesUsed);
-
-        static String defaultId(String className) {
-            /* use class name default id */
-            int lastIndex = className.lastIndexOf('$');
-            if (lastIndex == -1) {
-                lastIndex = className.lastIndexOf('.');
-            }
-            return className.substring(lastIndex + 1, className.length());
-        }
+    Collection<String> getResourceIds() {
+        return internalResources.keySet();
     }
 
-    private static final class LegacyLoader extends Loader {
-
-        static final Loader INSTANCE = new LegacyLoader();
-
-        private LegacyLoader() {
-        }
-
-        @Override
-        void loadImpl(ClassLoader loader, List<? super InstrumentCache> list, Set<? super String> classNamesUsed) {
-            Enumeration<URL> en;
-            try {
-                en = loader.getResources("META-INF/truffle/instrument");
-            } catch (IOException ex) {
-                throw new IllegalStateException("Cannot read list of Truffle instruments", ex);
-            }
-            while (en.hasMoreElements()) {
-                URL u = en.nextElement();
-                Properties p;
-                try {
-                    p = new Properties();
-                    try (InputStream is = u.openStream()) {
-                        p.load(is);
-                    }
-                } catch (IOException ex) {
-                    PrintStream out = System.err;
-                    out.println("Cannot process " + u + " as language definition");
-                    ex.printStackTrace();
-                    continue;
-                }
-                for (int cnt = 1;; cnt++) {
-                    String prefix = "instrument" + cnt + ".";
-                    String className = p.getProperty(prefix + "className");
-                    if (className == null) {
-                        break;
-                    }
-                    // we don't want multiple instruments with the same class name
-                    if (!classNamesUsed.contains(className)) {
-                        classNamesUsed.add(className);
-                        list.add(createInstrumentCache(prefix, p, loader));
-                    }
-                }
-            }
-        }
-
-        private static InstrumentCache createInstrumentCache(String prefix, Properties info, ClassLoader loader) {
-            String className = info.getProperty(prefix + "className");
-            String name = info.getProperty(prefix + "name");
-            String version = info.getProperty(prefix + "version");
-            boolean internal = Boolean.valueOf(info.getProperty(prefix + "internal"));
-            String id = info.getProperty(prefix + "id");
-            if (id == null || id.isEmpty()) {
-                id = defaultId(className);
-            }
-            int servicesCounter = 0;
-            Set<String> services = new TreeSet<>();
-            for (;;) {
-                String nth = prefix + "service" + servicesCounter++;
-                String serviceName = info.getProperty(nth);
-                if (serviceName == null) {
-                    break;
-                }
-                services.add(serviceName);
-            }
-            InstrumentReflection reflection = new LegacyInstrumentReflection(name, loader, className);
-            return new InstrumentCache(id, name, version, className, internal, services, reflection);
-        }
-
-        private static final class LegacyInstrumentReflection extends InstrumentReflection {
-
-            private final String name;
-            private final ClassLoader loader;
-            private final String className;
-            private volatile Class<? extends TruffleInstrument> instrumentClass;
-
-            LegacyInstrumentReflection(String name, ClassLoader loader, String className) {
-                Objects.requireNonNull(name, "Name must be non null.");
-                Objects.requireNonNull(loader, "Loader must be non null.");
-                Objects.requireNonNull(className, "ClassName must be non null.");
-                this.name = name;
-                this.loader = loader;
-                this.className = className;
-            }
-
-            @Override
-            TruffleInstrument newInstance() {
-                try {
-                    return getInstrumentationClass().getDeclaredConstructor().newInstance();
-                } catch (Exception e) {
-                    throw new IllegalStateException("Cannot create instance of " + name + " language implementation. Public default constructor expected in " + className + ".", e);
-                }
-            }
-
-            @Override
-            Class<? extends TruffleInstrument> aotInitializeAtBuildTime() {
-                initializeInstrumentClass();
-                assert instrumentClass != null;
-                return instrumentClass;
-            }
-
-            private Class<? extends TruffleInstrument> getInstrumentationClass() {
-                if (!TruffleOptions.AOT) {
-                    initializeInstrumentClass();
-                }
-                return instrumentClass;
-            }
-
-            private void initializeInstrumentClass() {
-                if (instrumentClass == null) {
-                    synchronized (this) {
-                        if (instrumentClass == null) {
-                            try {
-                                exportTruffle(loader);
-                                instrumentClass = Class.forName(className, true, loader).asSubclass(TruffleInstrument.class);
-                            } catch (Exception ex) {
-                                throw new IllegalStateException("Cannot initialize " + name + " instrument with implementation " + className, ex);
-                            }
-                        }
-                    }
-                }
-            }
-        }
+    Collection<InternalResourceCache> getResources() {
+        return internalResources.values();
     }
 
-    private static final class ServicesLoader extends Loader {
-
-        static final Loader INSTANCE = new ServicesLoader();
-        private static final String DEBUGGER_CLASS = "com.oracle.truffle.api.debug.impl.DebuggerInstrument";
-        private static final String DEBUGGER_PROVIDER = "com.oracle.truffle.api.debug.impl.DebuggerInstrumentProvider";
-
-        private ServicesLoader() {
-        }
-
-        @Override
-        void loadImpl(ClassLoader loader, List<? super InstrumentCache> list, Set<? super String> classNamesUsed) {
-            exportTruffle(loader);
-            for (TruffleInstrument.Provider provider : ServiceLoader.load(TruffleInstrument.Provider.class, loader)) {
-                loadInstrumentImpl(provider, list, classNamesUsed);
-            }
-
-            /*
-             * Make sure the builtin debugger instrument is loaded if the service loader does not
-             * pick them up. This may happen on JDK 11 if the loader delegates to the platform class
-             * loader and does see the Truffle module only through the special named module behavior
-             * for the platform class loader. However, while truffle classes are visible, Java
-             * services are not enumerated from there. This is a workaround, that goes around this
-             * problem by hardcoding instruments that are included in the Truffle module. The
-             * behavior is actually beneficial as this also avoids languages to be picked up from
-             * the application classpath.
-             */
-            if (!classNamesUsed.contains(DEBUGGER_CLASS)) {
-                try {
-                    loadInstrumentImpl((TruffleInstrument.Provider) loader.loadClass(DEBUGGER_PROVIDER).getConstructor().newInstance(), list,
-                                    classNamesUsed);
-                } catch (Exception e) {
-                    throw shouldNotReachHere("Failed to discover debugger instrument.", e);
-                }
-            }
-        }
-
-        static void loadInstrumentImpl(TruffleInstrument.Provider provider, List<? super InstrumentCache> list, Set<? super String> classNamesUsed) {
-            Registration reg = provider.getClass().getAnnotation(Registration.class);
-            if (reg == null) {
-                PrintStream out = System.err;
-                out.println("Provider " + provider.getClass() + " is missing @Registration annotation.");
-                return;
-            }
-            String className = provider.getInstrumentClassName();
-            String name = reg.name();
-            String id = reg.id();
-            if (id == null || id.isEmpty()) {
-                id = defaultId(className);
-            }
-            String version = reg.version();
-            boolean internal = reg.internal();
-            Set<String> servicesClassNames = new TreeSet<>();
-            for (String service : provider.getServicesClassNames()) {
-                servicesClassNames.add(service);
-            }
-            // we don't want multiple instruments with the same class name
-            if (!classNamesUsed.contains(className)) {
-                classNamesUsed.add(className);
-                InstrumentReflection reflection = new ServiceLoaderInstrumentReflection(provider);
-                list.add(new InstrumentCache(id, name, version, className, internal, servicesClassNames, reflection));
-            }
-        }
-
-        private static final class ServiceLoaderInstrumentReflection extends InstrumentReflection {
-
-            private final TruffleInstrument.Provider provider;
-
-            ServiceLoaderInstrumentReflection(TruffleInstrument.Provider provider) {
-                assert provider != null;
-                this.provider = provider;
-            }
-
-            @Override
-            TruffleInstrument newInstance() {
-                return provider.create();
-            }
-
-            @Override
-            Class<? extends TruffleInstrument> aotInitializeAtBuildTime() {
-                return null;
-            }
-        }
+    String getWebsite() {
+        return website;
     }
 
+    SandboxPolicy getSandboxPolicy() {
+        return sandboxPolicy;
+    }
+
+    private static void emitWarning(String message, Object... args) {
+        PolyglotEngineImpl.logFallback(String.format(message + "%n", args));
+    }
 }
